# PocketPico

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md
.github/workflows/: main.yml
ext/i2s/: i2s.c  i2s.h
ext/ili9225/: CMakeLists.txt  ili9225_font.c  ili9225_font.h  ili9225_lcd.c  ili9225_lcd.h  ili9225_lcd.pio
inc/: debug.h  gbcolors.h  mk_ili9225.h
src/: main.c  mk_ili9225.c
